List blogs initial commit
Add BlogList java class to return a list of all resource of type blog post. Add
blogList.html as a Sightly component utilizing the BlogList Java class which
implements Sightly's Use interface.

--- a/ui/src/main/resources/initial-content/apps/publick/components/admin/blogList/blogList.html
+++ b/ui/src/main/resources/initial-content/apps/publick/components/admin/blogList/blogList.html
@@ -1,1 +1,7 @@
-this is a blog list component
+<div data-sly-use.list="com.nateyolles.sling.publick.components.admin.BlogList" data-sly-unwrap></div>
+
+<h3>Blogs</h3>
+
+<ul data-sly-list="${list.blogs}">
+  <li><a href="${item.path}.html">${item.name}</a> <a href="edit.html${item.path}">edit</a></li>
+</ul>
