Upload and display blog's main image
Add /content/images to the initial content structure. Upload image to /content/images.
Display image on edit and view pages.

--- a/ui/src/main/resources/jcr_root/apps/publick/components/admin/blogEdit/blogEdit.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/components/admin/blogEdit/blogEdit.html
@@ -54,6 +54,10 @@
     <label>
       Image
       <input type="file" name="image">
+      <div data-sly-test="${blog.image}">
+        <img src="${blog.image}"><br>
+        <span data-sly-text="${blog.image}"></span>
+      </div>
     </label>
   </div>
 
