--- a/ui/src/main/resources/jcr_root/apps/publick/components/foundation/blogView/blogView.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/components/foundation/blogView/blogView.html
@@ -23,5 +23,10 @@
 </div>
 
 <div>
+    Image: ${blog.image}
+    <img src="${blog.image}" data-sly-test="${blog.image}">
+</div>
+
+<div>
     Content: ${blog.content}
 </div>
