Allow editing of blog
Check if blog exists, update resource if found, create new resource if not found. Turn blog
content into rich text editor. Add admin index page.

--- a/ui/src/main/resources/jcr_root/apps/publick/components/admin/blogEdit/blogEdit.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/components/admin/blogEdit/blogEdit.html
@@ -64,7 +64,7 @@
   <div>
     <label>
       Content
-      <textarea name="content">${blog.content}</textarea>
+      <textarea class="blog-edit-content" name="content">${blog.content @ context='unsafe'}</textarea>
     </label>
   </div>
 
