--- a/ui/src/main/resources/jcr_root/apps/publick/components/admin/blogList/blogList.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/components/admin/blogList/blogList.html
@@ -1,7 +1,24 @@
 <div data-sly-use.list="com.nateyolles.sling.publick.components.admin.BlogList" data-sly-unwrap></div>
 
-<h3>Blogs</h3>
-
-<ul data-sly-list="${list.blogs}">
-  <li><a href="${item.path}.html">${item.name}</a> <a href="edit.html${item.path}">edit</a></li>
-</ul>
+<div class="row">
+    <div class="col-lg-12">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th class="column-small">#</th>
+                    <th>Blog</th>
+                    <th class="column-small">Edit</th>
+                    <th class="column-small">Delete</th>
+                </tr>
+            </thead>
+            <tbody data-sly-list="${list.blogs}">
+                <tr>
+                    <td data-sly-text="${itemList.count}"></td>
+                    <td><a href="${item.path}.html" target="_blank">${item.name}</a></td>
+                    <td><a href="edit.html${item.path}"><i class="glyphicon glyphicon-pencil"></i></a></td>
+                    <td><i class="glyphicon glyphicon-trash"></i></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
