Arrange BlogEdit column spans

--- a/ui/src/main/resources/jcr_root/apps/publick/components/admin/blogEdit/blogEdit.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/components/admin/blogEdit/blogEdit.html
@@ -1,33 +1,52 @@
 <div data-sly-use.blog="com.nateyolles.sling.publick.components.admin.BlogEdit" data-sly-unwrap></div>
 
-
-<div class="row">
-    <div class="col-lg-6">
-        <form action="/bin/editblogpost" method="post" enctype="multipart/form-data">
+<form action="/bin/editblogpost" method="post" enctype="multipart/form-data">
+    <div class="row">
+        <div class="col-lg-6 col-md-6">
             <div class="form-group">
                 <label>Title</label>
                 <input type="text" name="title" data-sly-attribute.value="${blog.title}" class="form-control">
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6">
             <div class="form-group">
                 <label>Month</label>
                 <select name="month" data-sly-list="${blog.months}" class="form-control">
                     <option data-sly-attribute.selected="${blog.month == item}">${item}</option>
                 </select>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6">
             <div class="form-group">
                 <label>Year</label>
                 <select name="year" data-sly-list="${blog.years}" class="form-control">
                     <option data-sly-attribute.selected="${blog.year == item}">${item}</option>
                 </select>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6">
             <div class="form-group">
                 <label>Friendly URL</label>
                 <input type="text" name="url" data-sly-attribute.value="${blog.url}" class="form-control">
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6">
             <div class="form-group">
                 <label>Publish</label><br>
                 <input type="checkbox" name="visible" value="true" data-sly-attribute.checked="${blog.visible}"> Show blog
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6">
             <div class="form-group">
                 <label>Keywords</label>
                 <div data-sly-test.hasKeywords="${blog.keywords && blog.keywords.length > 0}"
@@ -40,6 +59,10 @@
                     <input type="text" name="keywords" class="form-control">
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6">
             <div class="form-group">
                 <label>Image</label>
                 <input type="file" name="image">
@@ -48,11 +71,15 @@
                     <span data-sly-text="${blog.image}"></span>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12">
             <div class="form-group">
                 <label>Content</label>
                 <textarea class="blog-edit-content form-control" name="content">${blog.content @ context='unsafe'}</textarea>
             </div>
             <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+        </div>
     </div>
-</div>
+</form>
