--- a/ui/src/main/resources/jcr_root/apps/publick/components/foundation/blogView/blogView.html
+++ b/ui/src/main/resources/jcr_root/apps/publick/components/foundation/blogView/blogView.html
@@ -23,6 +23,10 @@
 </div>
 
 <div>
+    Description: ${blog.description}
+</div>
+
+<div>
     Image: ${blog.image}
     <img src="${blog.image}" data-sly-test="${blog.image}">
 </div>
