--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/login/login.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/login/login.html
@@ -20,7 +20,7 @@
                                 <input class="form-control" placeholder="Password" name="j_password" type="password">
                             </div>
                             <input type="hidden" name="_charset_" value="UTF-8">
-                            <input type="hidden" name="sling.auth.redirect" value="/content/admin/index.html">
+                            <input type="hidden" name="sling.auth.redirect" value="/admin/index.html">
                             <button type="submit" class="btn btn-lg btn-primary btn-block">Login</button>
                         </fieldset>
                     </form>
