Create List view for blogPage component
List view for blogPage component. Refactor date formatting.

--- a/ui/src/main/resources/jcr_root/libs/publick/components/foundation/blogView/blogView.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/foundation/blogView/blogView.html
@@ -1,6 +1,5 @@
-<div data-sly-use.blog="com.nateyolles.sling.publick.components.foundation.BlogView" data-sly-unwrap></div>
-
-<div class="container">
+<div data-sly-use.blog="com.nateyolles.sling.publick.components.foundation.BlogView"
+     class="container">
   <div class="row">
     <div class="col-md-12">
       <div class="page-header">
