--- a/ui/src/main/resources/jcr_root/libs/publick/components/foundation/blogList/blogList.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/foundation/blogList/blogList.html
@@ -1,5 +1,4 @@
-<div data-sly-use.list="com.nateyolles.sling.publick.components.foundation.BlogList" data-sly-unwrap></div>
-
-<div data-sly-list="${list.blogs}">
+<div data-sly-use.list="com.nateyolles.sling.publick.components.foundation.BlogList"
+     data-sly-list="${list.blogs}" data-sly-unwrap>
   <div data-sly-resource="${item.path @ addSelectors='list'}" data-sly-unwrap></div>
 </div>
