Add request rate throttle
Limit posts to 1 per 10 seconds. Update servlet paths to differentiate between public and admin
paths. Apply filter only to public paths. Admin paths are still protected behind authentication.

--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/blogEdit/blogEdit.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/blogEdit/blogEdit.html
@@ -1,6 +1,6 @@
 <div data-sly-use.blog="com.nateyolles.sling.publick.components.admin.BlogEdit" data-sly-unwrap></div>
 
-<form action="/bin/editblogpost" method="post" enctype="multipart/form-data">
+<form action="/bin/admin/editblogpost" method="post" enctype="multipart/form-data">
     <div class="row">
         <div class="col-lg-6 col-md-6">
             <div class="form-group">
