--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
@@ -7,7 +7,7 @@
                 <h3 class="panel-title">Email</h3>
             </div>
             <div class="panel-body">
-                <form action="/bin/emailconfig" method="post">
+                <form action="/bin/admin/emailconfig" method="post">
                     <div class="row">
                         <div class="col-lg-12 col-md-12">
                             <div class="form-group">
