--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/recaptchaConfig/recaptchaConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/recaptchaConfig/recaptchaConfig.html
@@ -7,7 +7,7 @@
                 <h3 class="panel-title">reCAPTCHA</h3>
             </div>
             <div class="panel-body">
-                <form action="/bin/recaptchaconfig" method="post">
+                <form action="/bin/admin/recaptchaconfig" method="post">
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
                             <div class="form-group">
