--- a/ui/src/main/resources/jcr_root/libs/publick/components/foundation/commentsView/commentsView.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/foundation/commentsView/commentsView.html
@@ -34,7 +34,7 @@
   </div>
   <div id="newCommentContainer">
     <div class="row" id="commentForm">
-      <form method="POST" action="/bin/addcomment">
+      <form method="POST" action="/bin/publick/addcomment">
         <div class="col-md-6">
           <div class="well">
             <div class="row">
