Add comment count

--- a/ui/src/main/resources/jcr_root/libs/publick/components/foundation/commentsView/commentsView.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/foundation/commentsView/commentsView.html
@@ -1,7 +1,7 @@
 <div data-sly-use.comments="com.nateyolles.sling.publick.components.foundation.CommentsView" class="container">
   <div class="row">
     <div class="col-md-12">
-      <h3>Comments</h3>
+      <h3>${comments.count} Comments</h3>
     </div>
   </div>
   <ul class="media-list" id="commentListContainer" data-sly-list.comment="${comments.comments}">
