--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
@@ -7,7 +7,16 @@
             <div class="panel-body">
                 <form action="/bin/admin/systemconfig" method="post">
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-xs-12">
+                            <div class="form-group">
+                                <label>Extensionless URLS</label><br>
+                                <input type="checkbox" name="extensionlessUrls" value="true" data-sly-attribute.checked="${config.extensionlessUrls}"> Enable extentionless URLs
+                                <span class="help-block">Enabling extensionless URLs will ensure that links are displayed correctly. The web server must still be setup to handle extensionless URLs through the proper rewrites and redirects. View <a href="#" data-toggle="modal" data-target="#apacheSample">sample Apache redirects</a>.</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Blog name</label>
                                 <input type="text" name="blogName" data-sly-attribute.value="${config.blogName}" class="form-control">
@@ -16,7 +25,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-xs-12">
                             <button type="submit" class="btn btn-primary">Save</button>
                         </div>
                     </div>
@@ -24,4 +33,64 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="modal fade" id="apacheSample">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Sample Apache web server redirects</h4>
+      </div>
+      <div class="modal-body">
+        <pre>
+&lt;IfModule mod_dir.c&gt;
+    DirectorySlash Off
+&lt;/IfModule&gt;
+
+&lt;IfModule mod_rewrite.c&gt;
+    RewriteEngine On
+
+    # Step 1: Redirect all paths that end in .html or slash.
+    # Redirect to remove index.html and /content. Hopefully
+    # you've provided the correct links so that you don't
+    # have to do any of these redirects.
+
+    # remove trailing slash
+    RewriteRule     ^(.+)/$ $1 [R=301,L,NC,QSA]
+
+    # remove content
+    RewriteRule     ^/content/(.*)$ /$1 [R=301,L,NC,QSA]
+
+    # Remove .html
+    RewriteRule     (.*).html$ $1 [R=301,L,NC,QSA]
+
+    # remove /index
+    RewriteRule     (.*)/index $1 [R=301,L,NC,QSA]
+
+    # Step 2: Use a path through to do an internal rewrite rather
+    # than a 301 or 302 redirect. Add the .html extension back on
+    # so that Sling can resolve the resource with the correct
+    # renderer.
+
+    # Ending without a slash or extension, pass through to *.html
+    RewriteCond     %{REQUEST_URI} !.*/j_security_check [NC]
+    RewriteCond     %{REQUEST_URI} !^/bin [NC]
+    RewriteCond     %{REQUEST_URI} !^/etc [NC]
+    RewriteCond     %{REQUEST_URI} !^/assets [NC]
+    RewriteCond     %{REQUEST_URI} !.*\..*/$ [NC]
+    RewriteCond     %{REQUEST_URI} !.*/$ [NC]
+    RewriteRule     (.*)$ $1.html [PT,L,NC,QSA]
+
+    # Ending with slash, pass through to index.html
+    RewriteCond     %{REQUEST_URI} .*/$ [NC]
+    RewriteRule     (.*)$ $1/index.html [PT,L,NC,QSA]
+&lt;/IfModule&gt;
+        </pre>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
