Update blogview with both absolute and relative paths for posts and images
Upde blogview with path getters. Update Sightly templates that use paths.
Update pom file with OSGi wrapper of jsoup dependency. Update comment
servlet to not check recaptcha if recaptcha isn't enabled.

--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/blogEdit/blogEdit.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/blogEdit/blogEdit.html
@@ -66,9 +66,9 @@
             <div class="form-group">
                 <label>Image</label>
                 <input type="file" name="image">
-                <div data-sly-test="${blog.image}">
-                    <img src="${blog.image}"><br>
-                    <span data-sly-text="${blog.image}"></span>
+                <div data-sly-test="${blog.imageRelativePath}">
+                    <img src="${blog.imageRelativePath}"><br>
+                    <span data-sly-text="${blog.imageRelativePath}"></span>
                 </div>
             </div>
         </div>
