Update rewrites to not append .html to files with extensions such as favicon.ico

--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
@@ -78,7 +78,7 @@
     RewriteCond     %{REQUEST_URI} !^/bin [NC]
     RewriteCond     %{REQUEST_URI} !^/etc [NC]
     RewriteCond     %{REQUEST_URI} !^/assets [NC]
-    RewriteCond     %{REQUEST_URI} !.*\..*/$ [NC]
+    RewriteCond     %{REQUEST_URI} !.*\..*/?$ [NC]
     RewriteCond     %{REQUEST_URI} !.*/$ [NC]
     RewriteRule     (.*)$ $1.html [PT,L,NC,QSA]
 
