Update System Config popup with redirects for Apache to force www

--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
@@ -51,6 +51,10 @@
 &lt;IfModule mod_rewrite.c&gt;
     RewriteEngine On
 
+    # Always use www
+    RewriteCond %{HTTP_HOST} !^www\.yourdomain\.com [NC]
+    RewriteRule ^(.*)$ http://www.yourdomain.com$1 [R=301,NC,QSA]
+
     # Step 1: Redirect all paths that end in .html or slash.
     # Redirect to remove index.html and /content. Hopefully
     # you've provided the correct links so that you don't
