Update Apache redirects for Sling 7 bug
The post servlet that handles updating user groups doesn't work when
posting to JSON in Sling 7. It has been fixed in Sling 8, however,
this project is using the latest version of Sling's downloadable JAR,
which is 7. The workaround is for the UserService in admin.js to post
to HTML rather than JSON to update groups. The side effect is that in
order to use extensionless URLs, you need to account for this in your
web server redirects.

--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
@@ -67,6 +67,11 @@
     RewriteRule     ^/content/(.*)$ /$1 [R=301,L,NC,QSA]
 
     # Remove .html
+    # Condition needed for a bug in Sling 7. Updating a user group
+    # doesn't work when posting to JSON. While fixed in Sling 8, the
+    # admin JavaScript UserService#PATH_UPDATE_GROUP would need to be
+    # updated as well if you were going to use it. See readme.md.
+    RewriteCond     %{REQUEST_URI} !^/system/userManager/group/.+\.update.html [NC]
     RewriteRule     (.*).html$ $1 [R=301,L,NC,QSA]
 
     # remove /index
