Disable save, edit, upload, delete UI for testers
Disable buttons, drag and drop uploads, etc... for non-admin and non-author
logins. JCR permissions handle the security, this is for UX only. Hide
sensitive information in configuration forms from testers.

--- a/ui/src/main/resources/jcr_root/etc/clientlibs/admin/css/admin.css
+++ b/ui/src/main/resources/jcr_root/etc/clientlibs/admin/css/admin.css
@@ -85,3 +85,25 @@
 .note-toolbar {
   margin-left: 0px !important;
 }
+
+.glyphicon.disabled {
+  cursor: not-allowed;
+  filter: alpha(opacity=65);
+  opacity: .65;
+}
+
+.glyphicon.disabled:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.disabled-container {
+  cursor: not-allowed !important;
+}
+
+.disabled-container a,
+.disabled-container img {
+  cursor: not-allowed !important;
+  filter: alpha(opacity=65);
+  opacity: .65;
+}
