--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/blogList/blogList.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/blogList/blogList.html
@@ -16,7 +16,7 @@
                     <td data-sly-text="${itemList.count}"></td>
                     <td><a href="${item.path}.html" target="_blank">${item.name}</a></td>
                     <td><a href="edit.html?post=${item.path}"><i class="glyphicon glyphicon-pencil"></i></a></td>
-                    <td><i class="glyphicon glyphicon-trash"></i></td>
+                    <td><i class="glyphicon glyphicon-trash ${!list.authorable && 'disabled'}"></i></td>
                 </tr>
             </tbody>
         </table>
