--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/blogEdit/blogEdit.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/blogEdit/blogEdit.html
@@ -87,7 +87,8 @@
                 <label>Content</label>
                 <textarea class="blog-edit-content form-control" name="content">${blog.content @ context='unsafe'}</textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary"
+                    data-sly-attribute.disabled="${!blog.authorable && 'disabled'}">Save</button>
         </div>
     </div>
 </form>
