--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/emailConfig/emailConfig.html
@@ -64,7 +64,8 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12 col-md-12">
-                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="submit" class="btn btn-primary"
+                                    data-sly-attribute.disabled="${!email.authorable && 'disabled'}">Save</button>
                         </div>
                     </div>
                 </form>
