--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/recaptchaConfig/recaptchaConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/recaptchaConfig/recaptchaConfig.html
@@ -29,14 +29,15 @@
                         <div class="col-lg-12 col-md-12">
                             <div class="form-group">
                                 <label>Secret key</label>
-                                <input type="text" name="secretKey" data-sly-attribute.value="${recaptcha.secretKey}" class="form-control">
+                                <input data-sly-attribute.type="${recaptcha.authorable ? 'text' : 'password'}" name="secretKey" data-sly-attribute.value="${recaptcha.secretKey}" class="form-control">
                                 <span class="help-block">The secret key used for communication between your site and Google.</span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12 col-md-12">
-                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="submit" class="btn btn-primary"
+                                    data-sly-attribute.disabled="${!recaptcha.authorable && 'disabled'}">Save</button>
                         </div>
                     </div>
                 </form>
