--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/userList/userList.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/userList/userList.html
@@ -1,5 +1,4 @@
-<div data-ng-controller="UserController">
-
+<div data-ng-controller="UserController" data-sly-use.page="com.nateyolles.sling.publick.sightly.WCMUse">
     <script type="text/ng-template" id="user.html">
         <div class="modal-header">
             <h3 class="modal-title" data-ng-show="isNew">Add new user</h3>
@@ -50,7 +49,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-primary" ng-click="ok()" ${!page.authorable ? 'disabled' : '' @ context='attribute'}>OK</button>
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
     </script>
@@ -83,7 +82,7 @@
                                     <td data-ng-bind="user.displayName"></td>
                                     <td><a href="" data-ng-click="edit('edit', $parent.$index, $index)"><i class="glyphicon glyphicon-pencil"></i></a></td>
                                     <td><a href="" data-ng-click="edit('pass', $parent.$index, $index)"><i class="glyphicon glyphicon-asterisk"></i></a></td>
-                                    <td data-ng-show="group.canUpdate"><a href="" data-ng-click="delete($parent.$index, $index)"><i class="glyphicon glyphicon-trash"></i></a></td>
+                                    <td data-ng-show="group.canUpdate"><a href="" data-ng-click="delete($parent.$index, $index)" data-sly-unwrap="${!page.authorable}"><i class="glyphicon glyphicon-trash ${!page.authorable && 'disabled'}"></i></a></td>
                                 </tr>
                             </tbody>
                         </table>
