--- a/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/components/admin/systemConfig/systemConfig.html
@@ -1,4 +1,4 @@
-<div class="row" data-sly-use.config="com.nateyolles.sling.publick.components.admin.SystemConfig">
+<div class="row" data-ng-controller="SystemSettingsController" data-sly-use.config="com.nateyolles.sling.publick.components.admin.SystemConfig">
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -10,7 +10,7 @@
                         <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Extensionless URLS</label><br>
-                                <input type="checkbox" name="extensionlessUrls" value="true" data-sly-attribute.checked="${config.extensionlessUrls}"> Enable extentionless URLs
+                                <input type="checkbox" name="extensionlessUrls" value="true" data-ng-model="extensionlessUrls" data-ng-init="extensionlessUrls = ${config.extensionlessUrls}"> Enable extentionless URLs
                                 <span class="help-block">Enabling extensionless URLs will ensure that links are displayed correctly. The web server must still be setup to handle extensionless URLs through the proper rewrites and redirects. View <a href="#" data-toggle="modal" data-target="#apacheSample">sample Apache redirects</a>.</span>
                             </div>
                         </div>
@@ -19,14 +19,22 @@
                         <div class="col-xs-12">
                             <div class="form-group">
                                 <label>Blog name</label>
-                                <input type="text" name="blogName" data-sly-attribute.value="${config.blogName}" class="form-control">
+                                <input type="text" name="blogName" data-ng-model="blogName" data-ng-init="blogName = '${config.blogName}'" class="form-control">
                                 <span class="help-block">The name of the blog to be used as titles and headers.</span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-xs-12 form-group">
+                            <button type="submit" class="btn btn-primary" data-ng-click="save($event)" data-sly-attribute.disabled="${!config.authorable && 'disabled'}">Save</button>
+                        </div>
+                    </div>
+                    <div class="row" data-ng-show="status.show">
                         <div class="col-xs-12">
-                            <button type="submit" class="btn btn-primary" data-sly-attribute.disabled="${!config.authorable && 'disabled'}">Save</button>
+                            <div class="alert {{status.type}} alert-dismissible" role="alert">
+                                <button type="button" class="close" aria-label="Close" data-ng-click="hideAlert()"><span aria-hidden="true">&times;</span></button>
+                                <strong data-ng-bind="status.header"></strong> <span data-ng-bind="status.message"></span>
+                            </div>
                         </div>
                     </div>
                 </form>
